fix : Board 전체 조회 기능 수정